# Acts-standalone

./: .gitignore  CMakeLists.txt  DetCylinderSurface.cpp  GenerateDummyMeasurements.cpp  KalmanFitUtils.cpp  KalmanFitUtils.h  Makefile  SimpleDetector.cpp  SimpleDetector.hpp  SimpleDetector.ipp  SuperSimpleDetElement.cpp  SuperSimpleDetElement.hpp  SuperSimpleDetector.cpp  SuperSimpleDetector.hpp  fittest.cpp  main.cpp  plot_3D.py  test.cpp  validation.html  validation.md
Detector/: DetCylinderSurface.cpp  DetCylinderSurface.hpp  SimpleDetector.cpp  SimpleDetector.hpp  SimpleDetector.ipp  SuperSimpleBarrel.cpp  SuperSimpleBarrel.hpp  SuperSimpleDetElement.cpp  SuperSimpleDetElement.hpp  SuperSimpleDetector.cpp  SuperSimpleDetector.hpp
PropTest/: main.cpp
Utilities/: GenerateDummyMeasurements.cpp  KalmanFitUtils.cpp  KalmanFitUtils.hpp  SaveDummyHits.cpp  read_config.cpp
jobs/: etaScan.cmd  eta_slice.cmd  eta_slice.ipp  initialError.cmd  loopers.cmd  measurements.cpp  phiScan.cmd  phi_slice.cmd  phi_slice.ipp  run_example_0.cpp  run_example_1.cpp  run_example_2.cpp  run_example_simple.cpp  run_example_supersimple.cpp  run_example_supersimple_barrel.cpp  singleTrack.cmd  singleTrackLowPt.cmd  test.cmd  uncertainties.cmd
scripts/: plot_circle.py  plot_covariance.py  plot_delta_pt.py  plot_hits.py  plot_initialerror.py  plot_uncertainties.py  track_cartoon.py
unittests/: testcatch.cpp
